# MadMario

./: .gitignore  MadMario_Colab.ipynb  README.md  agent.py  autonomous.py  config.py  environment.py  main.py  mcp_server.py  multi_agent.py  neural.py  plot_compare.py  pyproject.toml  requirements.txt  train.py  wrappers.py
.github/workflows/: ci.yml
docs/: COMPARISON.md  EVALUATION.md  PLAN.md  THEORY.md
madmario/: __init__.py  agent.py  autonomous.py  cli.py  environment.py  mcp_server.py  metrics.py  multi_agent.py  plotting.py  replay.py
tests/: test_agent.py  test_metrics.py  test_multi_agent.py  test_neural.py  test_replay.py  test_wrappers.py
wandb/: latest-run
wandb/run-20260612_141415-o34fu8t2/: run-o34fu8t2.wandb
wandb/run-20260612_141415-o34fu8t2/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260612_141415-o34fu8t2/files/media/table/pbt/: history_2_5e1eafb2ba6c5860e2f3.table.json
wandb/run-20260612_141415-o34fu8t2/files/media/table/shared/: history_1_54e39f9db78514c1c149.table.json
wandb/run-20260612_141415-o34fu8t2/files/media/table/single/: history_0_5fbd8e4aa42317c4f4b0.table.json
