[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "madmario"
version = "2.0.0"
description = "Super Mario DQN — modernised, multi-agent, MCP-enabled"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "gymnasium>=0.29",
    "gym>=0.26",
    "gym-super-mario-bros>=9.0",
    "nes-py>=9.0",
    "scikit-image>=0.21",
    "opencv-python-headless>=4.8",
    "matplotlib",
    "wandb>=0.15",
    "typer>=0.9",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[project.scripts]
madmario       = "train:app"
madmario-mcp   = "mcp_server:_main"

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
